[package]
name = "console-timer"
version = "0.1.0"
authors = ["Evgenii Pochechuev <pchchv@proton.me>"]
edition = "2021"
description = "Simple timer in your terminal."
readme = "README.md"
repository = "https://github.com/pchchv/console-timer"
license = "Apache-2.0"
keywords = ["cli"]

[dependencies]
crossterm = "0.28.1"
regex = "1.11.1"
